Minor bug fixes on small screens

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -44,8 +44,10 @@
     justify-content: space-between;
     align-items: center;
     &__btn {
+      margin: 0;
       background: none;
       border: none;
+
       & svg {
         width: 5rem;
         height: 5rem;
@@ -59,16 +61,27 @@
         &:hover {
           fill: rgba(white, 1);
         }
+        @media screen and (max-width: 560px) {
+          margin: 0.5rem;
+          width: 3rem;
+          height: 3rem;
+        }
       }
     }
     &__dots {
       margin: 1rem;
       padding: 0.3rem 0.5rem;
       align-self: flex-end;
+      justify-self: center;
       display: flex;
       justify-content: space-around;
       background-color: rgba(black, 0.5);
       border-radius: 10px;
+      @media screen and (max-width: 560px) {
+        margin: 0;
+        margin-bottom: 1rem;
+      }
+
       &__dot {
         margin: 0.5rem;
         width: 2rem;
@@ -78,6 +91,15 @@
         background-color: rgba(white, 0.3);
         cursor: pointer;
         transition: all 0.4s ease;
+        @media screen and (max-width: 560px) {
+          margin: 0.3rem;
+          width: 1.8rem;
+          height: 1.8rem;
+        }
+        @media screen and (max-width: 360px) {
+          width: 1.5rem;
+          height: 1.5rem;
+        }
 
         &:hover {
           background-color: rgba(white, 0.5);
@@ -155,8 +177,9 @@
     justify-content: center;
 
     @media screen and (max-width: 560px) {
-      font-size: 2.5rem;
+      font-size: 1.8rem;
       height: 7rem;
+      padding: 1rem 0;
     }
   }
 
@@ -251,6 +274,9 @@
       url("images/mastiff.webp");
     grid-template-columns: 1fr;
   }
+  @media screen and (max-width: 560px) {
+    padding: 1.5rem;
+  }
 
   &__title {
     font-family: "SlopeOpera";
@@ -259,6 +285,10 @@
     text-shadow: 2px 2px 0 $color-light;
     @media screen and (max-width: 770px) {
       font-size: 5rem;
+      text-align: center;
+    }
+    @media screen and (max-width: 560px) {
+      font-size: 3rem;
       text-align: center;
     }
   }
@@ -297,6 +327,7 @@
     transition: all 0.5s ease;
 
     @media screen and (max-width: 770px) {
+      padding: 0;
       height: 40rem;
       border: 0;
       border-right: 0 !important;
@@ -324,6 +355,7 @@
       width: 100%;
 
       &--title {
+        width: 100%;
         font-family: "SlopeOpera";
         text-align: center;
         margin-bottom: 1rem;
@@ -331,6 +363,9 @@
         background-color: rgba($color-dark, 0.7);
         color: $color-light;
         transition: all 0.3s ease;
+        @media screen and (max-width: 560px) {
+          padding: 1rem;
+        }
 
         &.active {
           background-color: $color-light;
@@ -339,9 +374,13 @@
       }
 
       &--subtitle {
+        padding: 1rem;
         transition: all 0.8s ease;
         height: 0;
         opacity: 0;
+        @media screen and (max-width: 560px) {
+          text-align: justify;
+        }
 
         &.active {
           height: 100%;
